# diffpng

./: .gitignore  CMakeLists.txt  CompareArgs.cpp  LPyramid.cpp  Metric.cpp  README.md  RGBAImage.cpp  RGBAImage.h  avx_mathfun.h  compareargs.cpp  compareargs.h  compareargs.hpp  diffpng.cpp  diffpng.hpp  lpyramid.cpp  lpyramid.h  lpyramid.hpp  metric.cpp  metric.h  metric.hpp  rgbaimage.cpp  rgbaimage.h  rgbaimage.hpp  v8f.h
test/: run_tests.bash
